# yt-whisper

./: .gitignore  pyproject.toml  setup.py
yt_whisper/: cli.py  utils.py
